v3.0.1 (2020.01.xx)
  - Revert cURL library to version 7.66.0
  - Revert reporting a fixed length (32KiB) stream chunk size to Kodi regardless of "DVR stream read chunk size" setting value

v3.0.0 (2019.12.14)
  - Add dependency on libxml2 library v2.9.10
  - Switch to incremental database schema versioning rather than tying to the addon version number
  - Switch to Electronic Program Guide (EPG) XMLTV source data (available to DVR subscribers only)
  - Change "Append repeat indicators to applicable episode names" setting to apply only to programs of type EP/SH
  - Remove "Electronic Program Guide (EPG) Metadata" discovery intervals setting
  - Remove "Trigger guide metadata discovery" PVR Client Specific setting
  - Add "Trigger guide listing discovery" PVR Client Specific setting
  - Fix bug in task scheduler that would allow pending tasks to execute after stop signal has been sent
  - Add one-time alert message indicating that DVR authorization is required to access Electronic Program Guide data
  - Rename "Append repeat indicators to applicable episode names" setting to "Append repeat indicators to applicable recording names"

v2.4.2 (2019.12.05)
  - Add dependency on zlib library v1.2.11
  - Add "Use Original Air Date timestamp for Recorded TV programs" setting
  - Enable DEFLATE and GZIP encoding support for backend HTTP data requests
  - Adapt to backend EPG change allowing for more data to be returned per web request
  - Limit EPG data requests to no more than 23.5 hours into the future if no devices with DVR authorization where discovered

v2.4.1 (2019.11.13)
  - Update cURL library to version 7.67.0
  - (Windows/Linux/Android/OSX) Wait up to 10 seconds for IPv4 network connectivity before executing startup discovery tasks
  - (Linux/OSX) Wait up to one minute for IPv4 network connectivity before executing wakeup discovery tasks
  - Report a fixed length (32KiB) stream chunk size to Kodi regardless of "DVR stream read chunk size" setting value