@@ -155,11 +155,8 @@ inline uint32_t read_be32(uint8_t const* ptr)
 //
 //	url				- URL of the stream to be opened
 //	buffersize		- Ring buffer size, in bytes
-//	readmincount	- Minimum bytes to return from a read operation
 
-httpstream::httpstream(char const* url, size_t buffersize, size_t readmincount) :
-	m_readmincount(std::max(align::down(readmincount, MPEGTS_PACKET_LENGTH), MPEGTS_PACKET_LENGTH)),
-	m_buffersize(align::up(buffersize, 65536))
+httpstream::httpstream(char const* url, size_t buffersize) : m_buffersize(align::up(buffersize, 65536))
 {
 	size_t		available = 0;				// Amount of available ring buffer data
 
@@ -280,7 +277,7 @@ void httpstream::close(void)
 
 std::unique_ptr<httpstream> httpstream::create(char const* url)
 {
-	return create(url, DEFAULT_RINGBUFFER_SIZE, DEFAULT_READ_MINCOUNT);
+	return create(url, DEFAULT_RINGBUFFER_SIZE);
 }
 
 //---------------------------------------------------------------------------
@@ -295,23 +292,7 @@ std::unique_ptr<httpstream> httpstream::create(char const* url)
 
 std::unique_ptr<httpstream> httpstream::create(char const* url, size_t buffersize)
 {
-	return create(url, buffersize, DEFAULT_READ_MINCOUNT);
-}
-
-//---------------------------------------------------------------------------
-// httpstream::create (static)
-//
-// Factory method, creates a new httpstream instance
-//
-// Arguments:
-//
-//	url				- URL of the stream to be opened
-//	buffersize		- Ring buffer size, in bytes
-//	readmincount	- Minimum bytes to return from a read operation
-
-std::unique_ptr<httpstream> httpstream::create(char const* url, size_t buffersize, size_t readmincount)
-{
-	return std::unique_ptr<httpstream>(new httpstream(url, buffersize, readmincount));
+	return std::unique_ptr<httpstream>(new httpstream(url, buffersize));
 }
 
 //---------------------------------------------------------------------------
@@ -594,10 +575,9 @@ size_t httpstream::read(uint8_t* buffer, size_t count)
 	size_t				available = 0;			// Available bytes to read
 
 	assert((m_curlm != nullptr) && (m_curl != nullptr));
-	assert(m_readmincount == align::down(m_readmincount, MPEGTS_PACKET_LENGTH));
-	assert(m_readmincount >= MPEGTS_PACKET_LENGTH);
 
 	if(count >= m_buffersize) throw std::invalid_argument("count");
+	count = align::down(count, MPEGTS_PACKET_LENGTH);
 	if(count == 0) return 0;
 
 	// Transfer data into the ring buffer until the minimum amount of data is available, 
@@ -605,7 +585,7 @@ size_t httpstream::read(uint8_t* buffer, size_t count)
 	transfer_until([&]() -> bool {
 
 		available = (m_tail > m_head) ? (m_buffersize - m_tail) + m_head : m_head - m_tail;
-		return (available >= m_readmincount);
+		return (available >= count);
 	});
 
 	// If there is no available data in the ring buffer after transfer_until, indicate stream is finished
