@@ -64,7 +64,6 @@ public:
 	// Factory method, creates a new httpstream instance
 	static std::unique_ptr<httpstream> create(char const* url);
 	static std::unique_ptr<httpstream> create(char const* url, size_t buffersize);
-	static std::unique_ptr<httpstream> create(char const* url, size_t buffersize, size_t readmincount);
 
 	// length
 	//
@@ -128,7 +127,7 @@ private:
 
 	// Instance Constructor
 	//
-	httpstream(char const* url, size_t buffersize, size_t readmincount);
+	httpstream(char const* url, size_t buffersize);
 
 	//-----------------------------------------------------------------------
 	// Private Member Functions
@@ -165,7 +164,6 @@ private:
 	//
 	CURL*						m_curl = nullptr;					// CURL easy interface handle
 	CURLM*						m_curlm = nullptr;					// CURL multi interface handle
-	size_t const				m_readmincount;						// Minimum read byte count
 
 	// STREAM STATE
 	//
